# SmartPersonalDashboard

./: CMakeLists.txt  CMakeLists.txt.user.c7cce69  CMakeLists.txt.user.dc0c466  Main.qml  README.md  main.cpp
Backend/: metricsservice.cpp  metricsservice.h
UI/: CenterComponent.qml  HomeComponent.qml  LeftComponent.qml  RightComponent.qml
